Created First Files and first code

--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <title>Aidan Pavlik</title>
   </head>
   <body>
+<header>
+  <h1>Aidan Pavlik</h1>
+</header>
+    <main id="content">
+      <article>
+        <h2>About me</h2>
+      </article>
+
+      <article>
+
+    <h2>Programming Languages</h2>
+
+    <h3>Experience</h3>
+  </article>
+
+    </main>
+    <<footer id="footer>"
+      <p>Site content for Aidan Pavlik</p>
+    </footer>
 
   </body>
 
