Added in hobbies headers

--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -5,7 +5,16 @@
     <title>Hobbies: Aidan Pavlik</title>
   </head>
   <body>
-
+    <header id="header">
+      <h1>
+        Aidan Pavlik
+      </h1>
+    </header>
+    <h2>DnD</h2>
+    <h2>Esports</h2>
+    <h2>Tennis</h2>
+    <h2>Travel</h2>
+    <h2>Coding</h2>
   </body>
 
 </html>
