Added in Programming languages Experience

--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -1,4 +1,4 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -14,6 +14,13 @@
     <h2>Esports</h2>
     <h2>Tennis</h2>
     <h2>Travel</h2>
+    <h3>Places I've been</h3>
+    <ul>
+      <b>Flordia</b>
+
+      Flordia
+      Arizona
+    </ul>
     <h2>Coding</h2>
   </body>
 
