--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>Aidan Pavlik</title>
   </head>
   <body>
-<header>
-  <h1>Aidan Pavlik</h1>
-</header>
+    <header>
+      <h1>Aidan Pavlik</h1>
+    </header>
     <main id="content">
       <article>
         <h2>About me</h2>
@@ -16,7 +16,15 @@
       <article>
 
     <h2>Programming Languages</h2>
-
+    <h3>Extensive Experience</h3>
+    <p>Java</p>
+    <h3>Limited Experience</h3>
+    <p>Python</p>
+    <p>HTML</p>
+    <p>Javascript</p>
+    <h3>Little Experience</h3>
+    <p>Swift</p>
+    <p>CSS</p>
     <h3>Experience</h3>
   </article>
 
