Valadated the code and made it more organised

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <title>Aidan Pavlik</title>
   </head>
+
+
+
   <body>
     <header>
       <h1>Aidan Pavlik</h1>
@@ -25,11 +28,11 @@
     <h3>Little Experience</h3>
     <p>Swift</p>
     <p>CSS</p>
-    <h3>Experience</h3>
+
   </article>
 
     </main>
-    <<footer id="footer>"
+    <footer id="footer">
       <p>Site content for Aidan Pavlik</p>
     </footer>
 
