Added states and my tennis experience

--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -11,15 +11,35 @@
       </h1>
     </header>
     <h2>DnD</h2>
+      <h3>Experience</h3>
+
+
+      <h3></h3>
     <h2>Esports</h2>
     <h2>Tennis</h2>
-    <h2>Travel</h2>
-    <h3>Places I've been</h3>
-    <ul>
-      <b>Flordia</b>
+    <p>I started playing in Highschool and played all 4 years. However my senior year got cut short because of covid</p>
+    <p>I still play casually when I can. It's a great way deal with stress</p>
 
-      Flordia
-      Arizona
+    <h2>Travel</h2>
+    <h3>States I have visited</h3>
+    <ul>
+      <li>Flordia</li>
+      <li>Wisconsin</li>
+      <li>Hawiai</li>
+      <li>Arizona</li>
+      <li>Michigan</li>
+      <li>North Carolina</li>
+      <li>South Carolina</li>
+      <li>Louisinana</li>
+      <li>tenesse</li>
+      <li>Nevada</li>
+      <li>Missuri</li>
+      <li>Indiana</li>
+      <li>Illinois</li>
+
+
+
+
     </ul>
     <h2>Coding</h2>
   </body>
