Added in my Esports and DnD experence to the hobbies page

--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -11,11 +11,19 @@
       </h1>
     </header>
     <h2>DnD</h2>
-      <h3>Experience</h3>
+      <h3>Being a player</h3>
+      <p>I stated playing DnD a little over a year ago and I have played many campaigns over the year</p>
+      <p>I typically play a sneaky character that uses brain over brawn</p>
+      <p>My favorite memory of being a player was knocked a teammate out which was definially an accient</p>
 
-
-      <h3></h3>
+      <h3>Being a DM</h3>
+      <p>I have created and DMed one campaign that lasted 6 momths and I am currently creating a sequal to that</p>
+      <p>They are both take place in the Warhammer Fantasy world</p>
+      <p>Creating painful puzzles for my players to complete for my own amusment</p>
     <h2>Esports</h2>
+    <p>I am currently on the IIT Overwatch team</p>
+    <p>This is my second year on the team playing tank</p>
+    <p>I truely enjoy being on the team as playing with teammates is a very different experience from playing the game on my own</p>
     <h2>Tennis</h2>
     <p>I started playing in Highschool and played all 4 years. However my senior year got cut short because of covid</p>
     <p>I still play casually when I can. It's a great way deal with stress</p>
