Created most of my resume and created a nested list for the programming languages

--- a/resume/index.html
+++ b/resume/index.html
@@ -1,11 +1,75 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Resume: Aidan Pavlik</title>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8" />
+  <title>Resume: Aidan Pavlik</title>
+</head>
 
-  </body>
+
+<body>
+  <header>
+    <h1>Resume: Aidan Pavlik</h1>
+  </header>
+  <main id="content">
+
+    <h2>Contact Information</h2>
+    <h3>Email</h3>
+    <h3>630-523-2863</h3>
+    <h3>Chicago Illinois</h3>
+
+    <h2>Education</h2>
+    <h3>Illinois Institute of Technology</h3>
+    <h3>Degree: Second year Information Technoloy Managment Student</h3>
+    <h3>Skills in:</h3>
+      <ul>
+        <li>OS Systems for Windows, Linux, and Mac</li>
+        <li>Computer hardware</li>
+        <li>Software Development</li>
+        <li>Networking</li>
+        <li>Web Development</li>
+      </ul>
+
+
+    <h3>Also have skills in leadership, time managment, focus, and keeping on track</h3>
+    <h3>My Work: (Insert Java Files here when we learn how to do so)</h3>
+    <h2>Work Experience</h2>
+    <h3>Tennis Site Director for IHSA state tournament</h3>
+
+
+    <h2>Programming Languages</h2>
+
+
+      <ul>
+        <li>Intermediante Experience
+          <ul>
+            <li>Java</li>
+          </ul>
+        </li>
+
+
+
+
+        <li>Limited Experience
+          <ul>
+            <li>Python</li>
+            <li>HTML</li>
+            <li>Javascript</li>
+          </ul>
+        </li>
+          <li>Little Experience
+            <ul>
+              <li>Swift</li>
+              <li>CSS</li>
+            </ul>
+            </li>
+      </ul>
+
+
+  </main>
+  <footer id="footer">
+    <p>Site content and Resume for Aidan Pavlik</p>
+  </footer>
+
+</body>
 
 </html>
