Finished draft of resume by adding in links for contact information

--- a/resume/index.html
+++ b/resume/index.html
@@ -11,11 +11,16 @@
     <h1>Resume: Aidan Pavlik</h1>
   </header>
   <main id="content">
-
+    <article id="resume">
     <h2>Contact Information</h2>
-    <h3>Email</h3>
-    <h3>630-523-2863</h3>
-    <h3>Chicago Illinois</h3>
+    <h3>Aidan Pavlik</h3>
+    <ul>
+      <li><a href="mailto:apavlik@hawk.iit.edu">apavlik@hawk.iit.edu</a></li>
+      <li><a href="tel:+1-630-523-2863">630-523-2863</a></li>
+      <li>Chicago Il</li>
+
+    </ul>
+    </article>
 
     <h2>Education</h2>
     <h3>Illinois Institute of Technology</h3>
