Fixed many typos and grammer mistakes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </article>
       <p>I am currently a second year ITM major at Illinois institute of technology.
         While I am learning the skills of ITM in general.
-        I intent to specialize in software development.
+        I intend to specialize in software development.
         I also participate in different clubs/organizations at IIT.
         The biggest being the IIT Esports organization. With the help of a couple of friends,
         I also intend to start a DnD/Tabletop RPG club at some point this year.
