--- a/resume/index.html
+++ b/resume/index.html
@@ -24,21 +24,21 @@
 
     <h2>Education</h2>
     <h3>Illinois Institute of Technology</h3>
-    <h3>Degree: Second year Information Technoloy Managment Student</h3>
+    <h3>Degree: Second year Information Technology Management Student</h3>
     <h3>Skills in:</h3>
       <ul>
         <li>OS Systems for Windows, Linux, and Mac</li>
-        <li>Computer hardware</li>
+        <li>Computer Hardware</li>
         <li>Software Development</li>
         <li>Networking</li>
         <li>Web Development</li>
       </ul>
 
 
-    <h3>Also have skills in leadership, time managment, focus, and keeping on track</h3>
+    <h3>Also have skills in leadership, time management, focus, and keeping on track</h3>
     <h3>My Work: (Insert Java Files here when we learn how to do so)</h3>
     <h2>Work Experience</h2>
-    <h3>Tennis Site Director for IHSA state tournament</h3>
+    <h3>Tennis Site Director for IHSA State Tournament</h3>
 
 
     <h2>Programming Languages</h2>
