--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -12,18 +12,18 @@
     </header>
     <h2>DnD</h2>
       <h3>Being a player</h3>
-      <p>I stated playing DnD a little over a year ago and I have played many campaigns over the year</p>
+      <p>I started playing DnD a little over a year ago and I have played many campaigns over the year</p>
       <p>I typically play a sneaky character that uses brain over brawn</p>
-      <p>My favorite memory of being a player was knocked a teammate out which was definially an accient</p>
+      <p>My favorite memory of being a player was when I knocked a teammate out which was definitely an accident</p>
 
       <h3>Being a DM</h3>
       <p>I have created and DMed one campaign that lasted 6 momths and I am currently creating a sequal to that</p>
       <p>They are both take place in the Warhammer Fantasy world</p>
-      <p>Creating painful puzzles for my players to complete for my own amusment</p>
+      <p>I enjoyed creating painful puzzles for my players to complete for my own amusment</p>
     <h2>Esports</h2>
     <p>I am currently on the IIT Overwatch team</p>
-    <p>This is my second year on the team playing tank</p>
-    <p>I truely enjoy being on the team as playing with teammates is a very different experience from playing the game on my own</p>
+    <p>This is my second year on the team for which I am a tank player</p>
+    <p>I truly enjoy being on the team as playing with teammates is a very different experience from playing the game on my own</p>
     <h2>Tennis</h2>
     <p>I started playing in Highschool and played all 4 years. However my senior year got cut short because of covid</p>
     <p>I still play casually when I can. It's a great way deal with stress</p>
@@ -33,15 +33,15 @@
     <ul>
       <li>Flordia</li>
       <li>Wisconsin</li>
-      <li>Hawiai</li>
+      <li>Hawaii</li>
       <li>Arizona</li>
       <li>Michigan</li>
       <li>North Carolina</li>
       <li>South Carolina</li>
-      <li>Louisinana</li>
-      <li>tenesse</li>
+      <li>Louisiana</li>
+      <li>Tennessee</li>
       <li>Nevada</li>
-      <li>Missuri</li>
+      <li>Missouri</li>
       <li>Indiana</li>
       <li>Illinois</li>
 
