Add sections and ID's, fixed spacing, stopped stacking headings

--- a/index.html
+++ b/index.html
@@ -8,8 +8,21 @@
 
 
   <body>
-    <header>
+    <header id="site-header">
       <h1>Aidan Pavlik</h1>
+      <nav id="site-nav">
+        <ul>
+          <li>
+            <a href="/">Home</a>
+          </li>
+          <li>
+            <a href="/resume">Resume</a>
+          </li>
+          <li>
+            <a href="/hobbies">Hobbies</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main id="content">
       <article>
