--- a/resume/index.html
+++ b/resume/index.html
@@ -9,56 +9,62 @@
 <body>
   <header>
     <h1>Resume: Aidan Pavlik</h1>
+    <nav id="site-nav">
+      <ul>
+        <li>
+          <a href="/">Home</a>
+        </li>
+        <li>
+          <a href="/resume">Resume</a>
+        </li>
+        <li>
+          <a href="/hobbies">Hobbies</a>
+        </li>
+      </ul>
+    </nav>
   </header>
   <main id="content">
     <article id="resume">
-    <h2>Contact Information</h2>
-    <h3>Aidan Pavlik</h3>
-    <ul>
-      <li><a href="mailto:apavlik@hawk.iit.edu">apavlik@hawk.iit.edu</a></li>
-      <li><a href="tel:+1-630-523-2863">630-523-2863</a></li>
-      <li>Chicago Il</li>
-
-    </ul>
+      <h2>Contact Information</h2>
+        <p>Aidan Pavlik</p>
+          <ul>
+            <li><a href="mailto:apavlik@hawk.iit.edu">apavlik@hawk.iit.edu</a></li>
+            <li><a href="tel:+1-630-523-2863">630-523-2863</a></li>
+            <li>Chicago Il</li>
+          </ul>
     </article>
-
-    <h2>Education</h2>
-    <h3>Illinois Institute of Technology</h3>
-    <h3>Degree: Second year Information Technology Management Student</h3>
-    <h3>Skills in:</h3>
-      <ul>
-        <li>OS Systems for Windows, Linux, and Mac</li>
-        <li>Computer Hardware</li>
-        <li>Software Development</li>
-        <li>Networking</li>
-        <li>Web Development</li>
-      </ul>
-
-
-    <h3>Also have skills in leadership, time management, focus, and keeping on track</h3>
-    <h3>My Work: (Insert Java Files here when we learn how to do so)</h3>
-    <h2>Work Experience</h2>
-    <h3>Tennis Site Director for IHSA State Tournament</h3>
-
-
+    <section id="education-and-skills">
+      <h2>Education</h2>
+      <p>Illinois Institute of Technology</p>
+      <p>Degree: Second year Information Technology Management Student</p>
+      <h3>Skills in:</h3>
+        <ul>
+          <li>OS Systems for Windows, Linux, and Mac</li>
+          <li>Computer Hardware</li>
+          <li>Software Development</li>
+          <li>Networking</li>
+          <li>Web Development</li>
+        </ul>
+        <p>Also have skills in leadership, time management, focus, and keeping on track</p>
+        <p>My Work: (Insert Java Files here when we learn how to do so)</p>
+      </section>
+      <section id="work">
+        <h2>Work Experience</h2>
+        <p>Tennis Site Director for IHSA State Tournament</p>
+      </section>
+      <section id="coding">
     <h2>Programming Languages</h2>
-
-
       <ul>
         <li>Intermediante Experience
           <ul>
             <li>Java</li>
           </ul>
         </li>
-
-
-
-
-        <li>Limited Experience
-          <ul>
-            <li>Python</li>
-            <li>HTML</li>
-            <li>Javascript</li>
+          <li>Limited Experience
+            <ul>
+              <li>Python</li>
+              <li>HTML</li>
+              <li>Javascript</li>
           </ul>
         </li>
           <li>Little Experience
@@ -66,15 +72,12 @@
               <li>Swift</li>
               <li>CSS</li>
             </ul>
-            </li>
+          </li>
       </ul>
-
-
+    </section>
   </main>
   <footer id="footer">
     <p>Site content and Resume for Aidan Pavlik</p>
   </footer>
-
 </body>
-
 </html>
