--- a/index.html
+++ b/index.html
@@ -1,72 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Aidan Pavlik</title>
-  </head>
-
-
-
-  <body>
-    <header id="site-header">
-      <h1>Aidan Pavlik</h1>
-      <nav id="site-nav">
-        <ul>
-          <li>
-            <a href="/">Home</a>
-          </li>
-          <li>
-            <a href="/resume">Resume</a>
-          </li>
-          <li>
-            <a href="/hobbies">Hobbies</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <main id="content">
-      <article>
-        <h2>About</h2>
-      </article>
-      <p>I am currently a second year ITM major at Illinois institute of technology.
-        While I am learning the skills of ITM in general.
-        I intend to specialize in software development.
-        I also participate in different clubs/organizations at IIT.
-        The biggest being the IIT Esports organization. With the help of a couple of friends,
-        I also intend to start a DnD/Tabletop RPG club at some point this year.
-
-      </p>
-      <article>
-
-      <h2>Personality</h2>
-      <p>I am a very quick and creative thinker.
-        I also like to look for unconvential solutions to problems that most would not think of.
-        I also like to think that I have a lot of common sense.
-        More so than most people I know. This allows me to not overthink a simple problem.
-        Finally, I firmly believe in not giving up and pushing through whatever you might be stuck on or troubling you.
-        Because most of the time you will
-        come out a better person because of it.
-      </p>
-
-      <h3>Links to websites I found very useful or at least amusing</h3>
-      <ul>
-        <li> <a href="https://courses.stolley.co/fwd/"> ITMD 361 Website</a></li>
-        <li> <a href="https://www.google.com/"> Google</a></li>
-        <li> <a href="https://www.youtube.com/watch?v=6KaMt91ELHU"> Best Upcoming game</a></li>
-        <li> <a href="http://dnd5e.wikidot.com/"> DnD Wiki Dot</a></li>
-        <li> <a href="https://www.iit.edu/student-experience/campus-and-housing/dining"> The site that describes IIT's terrible food</a></li>
-
-      </ul>
-
-
-
-  </article>
-
-    </main>
-    <footer id="footer">
-      <p>Site content for Aidan Pavlik</p>
-    </footer>
-
-  </body>
-
-</html>
+  <html lang="en">
+    <head>
+      <meta charset="utf-8" />
+      <title>Aidan Pavlik</title>
+    </head>
+    <body>
+      <header id="site-header">
+        <h1>Aidan Pavlik</h1>
+        <nav id="site-nav">
+          <ul>
+            <li>
+              <a href="/">Home</a>
+            </li>
+            <li>
+              <a href="/resume">Resume</a>
+            </li>
+            <li>
+              <a href="/hobbies">Hobbies</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <main id="content">
+        <article id="about-me">
+          <h2>About</h2>
+            <p>I am currently a second year ITM major at Illinois institute of technology.
+                While I am learning the skills of ITM in general.
+                I intend to specialize in software development.
+                I also participate in different clubs/organizations at IIT.
+                The biggest being the IIT Esports organization. With the help of a couple of friends,
+                I also intend to start a DnD/Tabletop RPG club at some point this year.
+            </p>
+        </article>
+        <article id="my-mind">
+          <h2>Personality</h2>
+          <p>I am a very quick and creative thinker.
+          I also like to look for unconvential solutions to problems that most would not think of.
+          I also like to think that I have a lot of common sense.
+          More so than most people I know. This allows me to not overthink a simple problem.
+          Finally, I firmly believe in not giving up and pushing through whatever you might be stuck on or troubling you.
+          Because most of the time you will
+          come out a better person because of it.
+          </p>
+        </article>
+        <article id="links">
+          <h3>Links to websites I found very useful or at least amusing</h3>
+          <ul>
+            <li> <a href="https://courses.stolley.co/fwd/"> ITMD 361 Website</a></li>
+            <li> <a href="https://www.google.com/"> Google</a></li>
+            <li> <a href="https://www.youtube.com/watch?v=6KaMt91ELHU"> Best Upcoming game</a></li>
+            <li> <a href="http://dnd5e.wikidot.com/"> DnD Wiki Dot</a></li>
+            <li> <a href="https://www.iit.edu/student-experience/campus-and-housing/dining"> The site that describes IIT's terrible food</a></li>
+          </ul>
+        </article>
+      </main>
+      <footer id="footer">
+        <p>Site content for Aidan Pavlik</p>
+      </footer>
+    </body>
+  </html>
