--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -1,55 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Hobbies: Aidan Pavlik</title>
-  </head>
-  <body>
-    <header id="header">
-      <h1>
-        Aidan Pavlik
-      </h1>
-    </header>
-    <h2>DnD</h2>
-      <h3>Being a player</h3>
-      <p>I started playing DnD a little over a year ago and I have played many campaigns over the year</p>
-      <p>I typically play a sneaky character that uses brain over brawn</p>
-      <p>My favorite memory of being a player was when I knocked a teammate out which was definitely an accident</p>
-
-      <h3>Being a DM</h3>
-      <p>I have created and DMed one campaign that lasted 6 momths and I am currently creating a sequal to that</p>
-      <p>They are both take place in the Warhammer Fantasy world</p>
-      <p>I enjoyed creating painful puzzles for my players to complete for my own amusment</p>
-    <h2>Esports</h2>
-    <p>I am currently on the IIT Overwatch team</p>
-    <p>This is my second year on the team for which I am a tank player</p>
-    <p>I truly enjoy being on the team as playing with teammates is a very different experience from playing the game on my own</p>
-    <h2>Tennis</h2>
-    <p>I started playing in Highschool and played all 4 years. However my senior year got cut short because of covid</p>
-    <p>I still play casually when I can. It's a great way deal with stress</p>
-
-    <h2>Travel</h2>
-    <h3>States I have visited</h3>
-    <ul>
-      <li>Flordia</li>
-      <li>Wisconsin</li>
-      <li>Hawaii</li>
-      <li>Arizona</li>
-      <li>Michigan</li>
-      <li>North Carolina</li>
-      <li>South Carolina</li>
-      <li>Louisiana</li>
-      <li>Tennessee</li>
-      <li>Nevada</li>
-      <li>Missouri</li>
-      <li>Indiana</li>
-      <li>Illinois</li>
-
-
-
-
-    </ul>
-    <h2>Coding</h2>
-  </body>
-
-</html>
+  <html lang="en">
+      <head>
+        <meta charset="utf-8" />
+        <title>Hobbies: Aidan Pavlik</title>
+      </head>
+      <body>
+        <header id="header">
+          <h1>Aidan Pavlik</h1>
+          <nav id="site-nav">
+            <ul>
+              <li>
+                <a href="/">Home</a>
+              </li>
+              <li>
+                <a href="/resume">Resume</a>
+              </li>
+              <li>
+                <a href="/hobbies">Hobbies</a>
+              </li>
+            </ul>
+          </nav>
+        </header>
+        <section id="dnd">
+        <h2>DnD</h2>
+          <p>Being a player</p>
+          <p>I started playing DnD a little over a year ago and I have played many campaigns over the year</p>
+          <p>I typically play a sneaky character that uses brain over brawn</p>
+          <p>My favorite memory of being a player was when I knocked a teammate out which was definitely an accident</p>
+          <p>Being a DM</p>
+          <p>I have created and DMed one campaign that lasted 6 momths and I am currently creating a sequal to that</p>
+          <p>They are both take place in the Warhammer Fantasy world</p>
+          <p>I enjoyed creating painful puzzles for my players to complete for my own amusment</p>
+        </section>
+        <section id="esports">
+          <h2>Esports</h2>
+          <p>I am currently on the IIT Overwatch team</p>
+          <p>This is my second year on the team for which I am a tank player</p>
+          <p>I truly enjoy being on the team as playing with teammates is a very different experience from playing the game on my own</p>
+        </section>
+        <section id="tennis">
+          <h2>Tennis</h2>
+          <p>I started playing in Highschool and played all 4 years. However my senior year got cut short because of covid</p>
+          <p>I still play casually when I can. It's a great way deal with stress</p>
+        </section>
+        <section id="travel">
+          <h2>Travel</h2>
+          <p>States I have visited</p>
+          <ul>
+            <li>Flordia</li>
+            <li>Wisconsin</li>
+            <li>Hawaii</li>
+            <li>Arizona</li>
+            <li>Michigan</li>
+            <li>North Carolina</li>
+            <li>South Carolina</li>
+            <li>Louisiana</li>
+            <li>Tennessee</li>
+            <li>Nevada</li>
+            <li>Missouri</li>
+            <li>Indiana</li>
+            <li>Illinois</li>
+          </ul>
+        </section>
+      <footer id="footer">
+        <p>Site content and Resume for Aidan Pavlik</p>
+      </footer>
+    </body>
+  </html>
