Made a crude start of a nav bar

--- a/resume/index.html
+++ b/resume/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <h1>Resume: Aidan Pavlik</h1>
-      <nav id="site-nav">
+      <nav class="site-nav">
         <ul>
           <li>
             <a href="/">Home</a>
