Finished the nav bar and introduced css to the whole website

--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -3,6 +3,7 @@
       <head>
         <meta charset="utf-8" />
         <title>Hobbies: Aidan Pavlik</title>
+        <link rel="stylesheet" href="/screen.css" />
       </head>
       <body>
         <header id="header">
