--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
       <meta charset="utf-8" />
       <title>Aidan Pavlik</title>
+      <link rel="stylesheet" href="/screen.css" />
     </head>
     <body>
       <header id="site-header">
