--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
       <meta charset="utf-8" />
       <title>Aidan Pavlik</title>
-      <link rel="stylesheet" href="/screen.css" />
+      <link rel="stylesheet" href="../screen.css" />
     </head>
     <body>
       <header id="site-header">
@@ -11,13 +11,13 @@
         <nav id="site-nav">
           <ul>
             <li>
-              <a href="/">Home</a>
+              <a href="../">Home</a>
             </li>
             <li>
-              <a href="/resume">Resume</a>
+              <a href="../resume/">Resume</a>
             </li>
             <li>
-              <a href="/hobbies">Hobbies</a>
+              <a href="../hobbies/">Hobbies</a>
             </li>
           </ul>
         </nav>
