Changed the pathing of all the files 3rd time

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <nav id="site-nav">
           <ul>
             <li>
-              <a href="../">Home</a>
+              <a href="">Home</a>
             </li>
             <li>
-              <a href="../resume/">Resume</a>
+              <a href="resume/">Resume</a>
             </li>
             <li>
-              <a href="../hobbies/">Hobbies</a>
+              <a href="hobbies/">Hobbies</a>
             </li>
           </ul>
         </nav>
