Changed the pathing of all the files 4th time

--- a/resume/index.html
+++ b/resume/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Resume: Aidan Pavlik</title>
-    <link rel="stylesheet" href="/screen.css" />
+    <link rel="stylesheet" href="../screen.css" />
   </head>
   <body>
     <header>
