Continue to create a flex grid

--- a/resume/index.html
+++ b/resume/index.html
@@ -23,7 +23,7 @@
       </nav>
     </header>
     <main id="content">
-      <article id="resume">
+      <section id="resume">
         <h2>Contact Information</h2>
           <p>Aidan Pavlik</p>
             <ul>
@@ -31,7 +31,7 @@
               <li><a href="tel:+1-630-523-2863">630-523-2863</a></li>
               <li>Chicago Il</li>
             </ul>
-      </article>
+      </section>
       <section id="education-and-skills">
         <h2>Education</h2>
         <p>Illinois Institute of Technology</p>
