Finish second draft of project 2

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </nav>
       </header>
       <main id="content">
-        <article id="about-me">
+        <section id="about-me">
           <h2>About</h2>
             <p>I am currently a second year ITM major at Illinois institute of technology.
                 While I am learning the skills of ITM in general.
@@ -32,8 +32,8 @@
                 The biggest being the IIT Esports organization. With the help of a couple of friends,
                 I also intend to start a DnD/Tabletop RPG club at some point this year.
             </p>
-        </article>
-        <article id="my-mind">
+        </section>
+        <section id="my-mind">
           <h2>Personality</h2>
           <p>I am a very quick and creative thinker.
           I also like to look for unconvential solutions to problems that most would not think of.
@@ -43,9 +43,9 @@
           Because most of the time you will
           come out a better person because of it.
           </p>
-        </article>
-        <article id="links">
-          <h3>Links to websites I found very useful or at least amusing</h3>
+        </section>
+        <section id="links">
+          <h2>Links to websites I found very useful or at least amusing</h2>
           <ul>
             <li> <a href="https://courses.stolley.co/fwd/"> ITMD 361 Website</a></li>
             <li> <a href="https://www.google.com/"> Google</a></li>
@@ -53,7 +53,7 @@
             <li> <a href="http://dnd5e.wikidot.com/"> DnD Wiki Dot</a></li>
             <li> <a href="https://www.iit.edu/student-experience/campus-and-housing/dining"> The site that describes IIT's terrible food</a></li>
           </ul>
-        </article>
+        </section>
       </main>
       <footer id="footer">
         <p>Site content for Aidan Pavlik</p>
