--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -22,6 +22,7 @@
             </ul>
           </nav>
         </header>
+        <main id="content">
         <section id="dnd">
         <h2>DnD</h2>
           <p>Being a player</p>
@@ -65,6 +66,7 @@
         </section>
       <footer id="footer">
         <p>Site content and Resume for Aidan Pavlik</p>
+      </main>
       </footer>
     </body>
   </html>
