Add image with responsive design

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
               I also intend to start a DnD/Tabletop RPG club at some point this year.
           </p>
         </section>
+        <section id="belegar">
+          <img src="assets/Belegar_Ironhammer.jpg" alt="Belegar Ironhammer" />
+        </section>
         <section id="my-mind">
           <h2>Personality</h2>
           <p>I am a very quick and creative thinker.
