Validate html and finish project 2

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           </p>
         </section>
         <section id="belegar">
+          <h2>Belegar Ironhammer</h2>
           <img src="assets/Belegar_Ironhammer.jpg" alt="Belegar Ironhammer" />
         </section>
         <section id="my-mind">
