Creat an unworking button and text box

--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
             <li> <a href="http://dnd5e.wikidot.com/"> DnD Wiki Dot</a></li>
             <li> <a href="https://www.iit.edu/student-experience/campus-and-housing/dining"> The site that describes IIT's terrible food</a></li>
           </ul>
+        </section id="support">
+        <section>
+          <h2>Questions, Comments, or Concerns?</h2>
+          <input type="text" id="textholder" placeholder="Please enter any comments or questions you might have!">
+          <input type="button" id="bt" value="Send">
         </section>
       </main>
       <footer id="footer">
