Create 2 new files and start JS

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <title>Aidan Pavlik</title>
       <link rel="stylesheet" href="screen.css" />
     </head>
+    <script src="main.js"></script>
     <body>
       <header id="site-header">
         <h1>Aidan Pavlik</h1>
