Got first JS script to work

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
       <title>Aidan Pavlik</title>
       <link rel="stylesheet" href="screen.css" />
     </head>
-    <script src="main.js"></script>
-    <body>
+\    <body>
       <header id="site-header">
         <h1>Aidan Pavlik</h1>
         <nav id="site-nav">
@@ -63,10 +62,12 @@
           <h2>Questions, Comments, or Concerns?</h2>
           <input type="text" id="textholder" placeholder="Please enter any comments or questions you might have!">
           <input type="button" id="bt" value="Send">
+          <p id="PH">PlaceHolder</p>
         </section>
       </main>
       <footer id="footer">
         <p>Site content for Aidan Pavlik</p>
       </footer>
+      <script src="main.js"></script>
     </body>
   </html>
