Create text replacment button and holder

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <h2>Questions, Comments, or Concerns?</h2>
           <input type="text" id="textholder" placeholder="Please enter any comments or questions you might have!">
           <input type="button" id="bt" value="Send">
-          <p id="PH">PlaceHolder</p>
+          <p id="ph">Your comments will be considered.</p>
         </section>
       </main>
       <footer id="footer">
