Finish first draft of project 3

--- a/index.html
+++ b/index.html
@@ -57,7 +57,15 @@
             <li> <a href="http://dnd5e.wikidot.com/"> DnD Wiki Dot</a></li>
             <li> <a href="https://www.iit.edu/student-experience/campus-and-housing/dining"> The site that describes IIT's terrible food</a></li>
           </ul>
-        </section id="support">
+        </section>
+        <section id="opinions">
+          <h2 id="hopi">Questions and Opinions</h2>
+          <p id="opi">
+            This is a great looking website.
+            I love the color scheme.
+            How long did you take to make this?
+          </p>
+        </section>
         <section>
           <h2>Questions, Comments, or Concerns?</h2>
           <input type="text" id="textholder" placeholder="Please enter any comments or questions you might have!">
