Validate all HTML, CSS, and JS

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <title>Aidan Pavlik</title>
       <link rel="stylesheet" href="screen.css" />
     </head>
-\    <body>
+    <body>
       <header id="site-header">
         <h1>Aidan Pavlik</h1>
         <nav id="site-nav">
