lint the project and complete Project 3

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         </section>
         <section>
           <h2>Questions, Comments, or Concerns?</h2>
-          <input type="text" id="textholder" placeholder="Please enter any comments or questions you might have!">
-          <input type="button" id="bt" value="Send">
+          <input type="text" id="textholder" placeholder="Please enter any comments or questions you might have!"/>
+          <input type="button" id="bt" value="Send"/>
           <p id="ph">Your comments will be considered.</p>
         </section>
       </main>
