replaced image of Belegar with myself

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </header>
       <main id="content">
         <section id="about-me">
-          <img src="assets/Belegar_Ironhammer.jpg" alt="Belegar Ironhammer" />
+          <img src="assets/aidan_pavlik_suit.jpg" alt="Image of Aidan Pavlik" />
           <p>I am currently a second year ITM major at Illinois institute of technology.
               While I am learning the skills of ITM in general.
               I intend to specialize in software development.
@@ -33,7 +33,6 @@
           </p>
         </section>
         <section id="my-mind">
-          <h2>Personality</h2>
           <p>I am a very quick and creative thinker.
           I also like to look for unconvential solutions to problems that most would not think of.
           I also like to think that I have a lot of common sense.
@@ -44,7 +43,6 @@
           </p>
         </section>
         <section id="links">
-          <h2>Links to websites I found very useful or at least amusing</h2>
           <ul>
             <li> <a href="https://courses.stolley.co/fwd/"> ITMD 361 Website</a></li>
             <li> <a href="https://www.google.com/"> Google</a></li>
