Start creating heading with image

--- a/index.html
+++ b/index.html
@@ -22,16 +22,20 @@
         </nav>
       </header>
       <main id="content">
-        <section id="about-me">
-          <img src="assets/aidan_pavlik_suit.jpg" alt="Image of Aidan Pavlik" />
-          <p>I am currently a second year ITM major at Illinois institute of technology.
-              While I am learning the skills of ITM in general.
-              I intend to specialize in software development.
-              I also participate in different clubs/organizations at IIT.
-              The biggest being the IIT Esports organization. With the help of a couple of friends,
-              I also intend to start a DnD/Tabletop RPG club at some point this year.
-          </p>
+
+
+
+
+        <section  class="about-me">
+          <img src="assets/code.png" alt="Image of programming languages" />
+          <h2>Hi, I'm Aidan Pavlik</h2>
+
         </section>
+
+
+
+
+
         <section id="my-mind">
           <p>I am a very quick and creative thinker.
           I also like to look for unconvential solutions to problems that most would not think of.
@@ -42,14 +46,14 @@
           come out a better person because of it.
           </p>
         </section>
-        <section id="links">
-          <ul>
-            <li> <a href="https://courses.stolley.co/fwd/"> ITMD 361 Website</a></li>
-            <li> <a href="https://www.google.com/"> Google</a></li>
-            <li> <a href="https://www.youtube.com/watch?v=6KaMt91ELHU"> Best Upcoming game</a></li>
-            <li> <a href="http://dnd5e.wikidot.com/"> DnD Wiki Dot</a></li>
-            <li> <a href="https://www.iit.edu/student-experience/campus-and-housing/dining"> The site that describes IIT's terrible food</a></li>
-          </ul>
+        <section id="about">
+          <p>I am currently a second year ITM major at Illinois institute of technology.
+              While I am learning the skills of ITM in general.
+              I intend to specialize in software development.
+              I also participate in different clubs/organizations at IIT.
+              The biggest being the IIT Esports organization. With the help of a couple of friends,
+              I also intend to start a DnD/Tabletop RPG club at some point this year.
+          </p>
         </section>
 
       </main>
