Add Text to center of image

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
 
         <section  class="about-me">
+
           <img src="assets/code.png" alt="Image of programming languages" />
-          <h2>Hi, I'm Aidan Pavlik</h2>
+          <h2 class="intro-text">Hi, I'm Aidan Pavlik</h2>
 
         </section>
-
 
 
 
