Remove change in color to indicate a link was clicked

--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
       </header>
       <main id="content">
 
-
-
-
         <section  class="about-me">
 
           <img src="assets/code.png" alt="Image of programming languages" />
@@ -37,6 +34,9 @@
 
 
         <section id="my-mind">
+          <h3>Who am I?</h3>
+          <img src="assets/aidan_pavlik_suit.jpg" alt="Image of programming languages" />
+
           <p>I am a very quick and creative thinker.
           I also like to look for unconvential solutions to problems that most would not think of.
           I also like to think that I have a lot of common sense.
