start grid formation for about me section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </header>
       <main id="content">
 
-        <section  class="about-me">
+        <section  class="intro">
 
           <img src="assets/code.png" alt="Image of programming languages" />
           <h2 class="intro-text">Hi, I'm Aidan Pavlik</h2>
@@ -33,11 +33,11 @@
 
 
 
-        <section id="my-mind">
-          <h3>Who am I?</h3>
-          <img src="assets/aidan_pavlik_suit.jpg" alt="Image of programming languages" />
+        <section class="about-me">
+          <h3 class="about-me-title">Who am I?</h3>
+          <img class="aidan-image"src="assets/aidan_pavlik_suit.jpg" alt="Image of programming languages" />
 
-          <p>I am a very quick and creative thinker.
+          <p class="about-me-text">I am a very quick and creative thinker.
           I also like to look for unconvential solutions to problems that most would not think of.
           I also like to think that I have a lot of common sense.
           More so than most people I know. This allows me to not overthink a simple problem.
