Create link to resume on about me section

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
           Because most of the time you will
           come out a better person because of it.
           </p>
+          <a class="about-resume" href="resume/">Visit My Resume</a>
+
         </section>
         <section id="about">
           <p>I am currently a second year ITM major at Illinois institute of technology.
