--- a/index.html
+++ b/index.html
@@ -46,16 +46,22 @@
           come out a better person because of it.
           </p>
           <a class="about-resume" href="resume/">Visit My Resume</a>
-
         </section>
-        <section id="about">
-          <p>I am currently a second year ITM major at Illinois institute of technology.
+
+
+
+
+        <section class="education">
+          <h3 class="education-title">Education</h3>
+          <p class="education-text">I am currently a second year ITM major at Illinois institute of technology.
               While I am learning the skills of ITM in general.
               I intend to specialize in software development.
               I also participate in different clubs/organizations at IIT.
               The biggest being the IIT Esports organization. With the help of a couple of friends,
               I also intend to start a DnD/Tabletop RPG club at some point this year.
           </p>
+          <img class="education-image"src="assets/illinois-tech-logo.png" alt="Image of Illinois Tech Logo" />
+          <a class="education-achievments"href="illinoistech.com">See my academic achievments</a>
         </section>
 
       </main>
