Finish rough draft for Code and Projects

--- a/index.html
+++ b/index.html
@@ -64,6 +64,21 @@
           <a class="education-achievments"href="illinoistech.com">See my academic achievments</a>
         </section>
 
+
+
+        <section class="projects">
+          <h3 class="projects-title">Projects and Code</h3>
+          <img class="projects-image"src="assets/github.png" alt="Image of GitHub Logo" />
+          <p class="projects-intro">Over the years I have completed many different Projects.
+            Mainly, these projects are programming related. I have the most experience and work in Java
+            although, I have knowledge in several other languages including Python, Javascript, CSS, HTML and MYSQL.
+            I have posted some of my bigger ones on my github page for public access.
+          </p>
+          <a class="github-link"href="https://github.com/amp8889?tab=repositories">Visit My GitHub Repo Page</a>
+
+
+        </section>
+
       </main>
       <footer id="footer">
         <p>Site content for Aidan Pavlik</p>
