--- a/index.html
+++ b/index.html
@@ -7,21 +7,7 @@
     </head>
     <body>
       <header id="site-header">
-        <nav id="site-nav">
-          <ul>
-            <li>
-              <a href="">Home</a>
-            </li>
-            <li>
-              <a href="resume/">Resume</a>
-            </li>
-            <li>
-              <a href="hobbies/">Hobbies</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
-      <main id="content">
+
 
         <section  class="intro">
 
@@ -33,11 +19,14 @@
 
 
 
-        <section class="about-me">
-          <h3 class="about-me-title">Who am I?</h3>
-          <img class="aidan-image"src="assets/aidan_pavlik_suit.jpg" alt="Image of programming languages" />
+      </header>
+      <main id="content">
 
-          <p class="about-me-text">I am a very quick and creative thinker.
+        <section class="homepage-tab">
+          <h3 class="title-one">Who am I?</h3>
+          <img class="image-one"src="assets/aidan_pavlik_suit.jpg" alt="Image of programming languages" />
+
+          <p class="intro-one">I am a very quick and creative thinker.
           I also like to look for unconvential solutions to problems that most would not think of.
           I also like to think that I have a lot of common sense.
           More so than most people I know. This allows me to not overthink a simple problem.
@@ -45,36 +34,36 @@
           Because most of the time you will
           come out a better person because of it.
           </p>
-          <a class="about-resume" href="resume/">Visit My Resume</a>
+          <a class="link-one" href="resume/">Visit My Resume</a>
         </section>
 
 
 
 
-        <section class="education">
-          <h3 class="education-title">Education</h3>
-          <p class="education-text">I am currently a second year ITM major at Illinois institute of technology.
+        <section class="homepage-tab" id="education">
+          <h3 class="title-two">Education</h3>
+          <p class="intro-two">I am currently a second year ITM major at Illinois institute of technology.
               While I am learning the skills of ITM in general.
               I intend to specialize in software development.
               I also participate in different clubs/organizations at IIT.
               The biggest being the IIT Esports organization. With the help of a couple of friends,
               I also intend to start a DnD/Tabletop RPG club at some point this year.
           </p>
-          <img class="education-image"src="assets/illinois-tech-logo.png" alt="Image of Illinois Tech Logo" />
-          <a class="education-achievments"href="illinoistech.com">See my academic achievments</a>
+          <img class="image-two"src="assets/illinois-tech-logo.png" alt="Image of Illinois Tech Logo" />
+          <a class="link-two"href="illinoistech.com">See my academic achievments</a>
         </section>
 
 
 
-        <section class="projects">
-          <h3 class="projects-title">Projects and Code</h3>
-          <img class="projects-image"src="assets/github.png" alt="Image of GitHub Logo" />
-          <p class="projects-intro">Over the years I have completed many different Projects.
+        <section class="homepage-tab">
+          <h3 class="title-one">Projects and Code</h3>
+          <img class="image-one"src="assets/github.png" alt="Image of GitHub Logo" />
+          <p class="intro-one">Over the years I have completed many different Projects.
             Mainly, these projects are programming related. I have the most experience and work in Java
             although, I have knowledge in several other languages including Python, Javascript, CSS, HTML and MYSQL.
             I have posted some of my bigger ones on my github page for public access.
           </p>
-          <a class="github-link"href="https://github.com/amp8889?tab=repositories">Visit My GitHub Repo Page</a>
+          <a class="link-one"href="https://github.com/amp8889?tab=repositories">Visit My GitHub Repo Page</a>
 
 
         </section>
