Add custom font and improved the mobile experience

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     </head>
     <body>
       <header id="site-header">
-
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&family=Roboto+Mono&display=swap" rel="stylesheet">
 
         <section  class="intro">
 
@@ -40,7 +42,7 @@
 
 
 
-        <section class="homepage-tab" id="education">
+        <section class="homepage-tab-two" id="education">
           <h3 class="title-two">Education</h3>
           <p class="intro-two">I am currently a second year ITM major at Illinois institute of technology.
               While I am learning the skills of ITM in general.
