Start the restructure of the resume page

--- a/resume/index.html
+++ b/resume/index.html
@@ -8,35 +8,28 @@
   <body>
     <header>
       <h1>Resume: Aidan Pavlik</h1>
-      <nav id="site-nav">
-        <ul>
-          <li>
-            <a href="../">Home</a>
-          </li>
-          <li>
-            <a href="../resume/">Resume</a>
-          </li>
-          <li>
-            <a href="../hobbies/">Hobbies</a>
-          </li>
-        </ul>
-      </nav>
     </header>
-    <main id="content">
-      <section id="resume">
-        <h2>Contact Information</h2>
+    <main id="resume-content">
+      <section class="side-info"id="resume">
+        <h3 class="resume-side-title">Contact Information</h3>
         <p>Aidan Pavlik</p>
         <ul>
-          <li><a href="mailto:apavlik@hawk.iit.edu">apavlik@hawk.iit.edu</a></li>
+          <li><a href="mailto:aidan.pavlik@gmail.com">aidan.pavlik@gmail.com</a></li>
           <li><a href="tel:+1-630-523-2863">630-523-2863</a></li>
           <li>Chicago Il</li>
         </ul>
       </section>
-      <section id="education-and-skills">
-        <h2>Education</h2>
+
+      <section class="main-info"id="education">
+        <h3 class="resume-main-title">Education</h3>
         <p>Illinois Institute of Technology</p>
         <p>Degree: Second year Information Technology Management Student</p>
-        <h3>Skills in:</h3>
+        <p>Cumulative GPA: 3.47</p>
+        <p>GPA within Major: 3.7</p>
+        </section>
+
+        <section class="main-info" id="skills">
+        <h3 class="resume-main-title">Professional Skills</h3>
         <ul>
           <li>OS Systems for Windows, Linux, and Mac</li>
           <li>Computer Hardware</li>
@@ -47,26 +40,34 @@
         <p>Also have skills in leadership, time management, focus, and keeping on track</p>
         <p>My Work: (Insert Java Files here when we learn how to do so)</p>
       </section>
-      <section id="work">
-        <h2>Work Experience</h2>
+
+      <section class="main-info">
+        <h3 class="resume-main-title">Personal Skills</h3>
+        <p>Good communication Skills</p>
+        <p>Can Easily work well with others</p>
+        <p>Always Keep a cool head no matter the situation</p>
+      </section>
+
+      <section class="main-info"id="work">
+        <h3 class="resume-main-title">Work Experience</h3>
         <p>Tennis Site Director for IHSA State Tournament</p>
       </section>
-      <section id="coding">
-        <h2>Programming Languages</h2>
+      <section class="main-info" id="coding">
+        <h3 class="resume-main-title">Programming Languages</h3>
         <ul>
-          <li>Intermediante Experience
+          <li>Intermediate Knowledge and Experience
             <ul>
               <li>Java</li>
             </ul>
           </li>
-          <li>Limited Experience
+          <li>Limited Knowledge and Experience
             <ul>
               <li>Python</li>
               <li>HTML</li>
               <li>Javascript</li>
             </ul>
           </li>
-          <li>Little Experience
+          <li>Little Knowledge and Experience
             <ul>
               <li>Swift</li>
               <li>CSS</li>
