Continue to remake resume by resizing all text and reformate text to look cleaner

--- a/resume/index.html
+++ b/resume/index.html
@@ -14,7 +14,7 @@
         <h3 class="resume-side-title">Contact Information</h3>
         <p>Aidan Pavlik</p>
         <ul>
-          <li><a href="mailto:aidan.pavlik@gmail.com">aidan.pavlik@gmail.com</a></li>
+          <li class="email"><a href="mailto:aidan.pavlik@gmail.com">aidan.pavlik@gmail.com</a></li>
           <li><a href="tel:+1-630-523-2863">630-523-2863</a></li>
           <li>Chicago Il</li>
         </ul>
@@ -31,26 +31,33 @@
         <section class="main-info" id="skills">
         <h3 class="resume-main-title">Professional Skills</h3>
         <ul>
-          <li>OS Systems for Windows, Linux, and Mac</li>
+          <li>Operating Systems for Windows, Linux, and Mac</li>
           <li>Computer Hardware</li>
           <li>Software Development</li>
           <li>Networking</li>
           <li>Web Development</li>
+          <li>Database Building and Managing</li>
         </ul>
-        <p>Also have skills in leadership, time management, focus, and keeping on track</p>
-        <p>My Work: (Insert Java Files here when we learn how to do so)</p>
       </section>
 
       <section class="main-info">
         <h3 class="resume-main-title">Personal Skills</h3>
-        <p>Good communication Skills</p>
-        <p>Can Easily work well with others</p>
-        <p>Always Keep a cool head no matter the situation</p>
+        <ul>
+          <li>Good communication Skills</li>
+          <li>Can Easily work well with others</li>
+          <li>Always Keep a cool head no matter the situation</li>
+          <li>Good time managment skills</li>
+          <li>Leadership skills</li>
+        </ul>
       </section>
 
       <section class="main-info"id="work">
-        <h3 class="resume-main-title">Work Experience</h3>
-        <p>Tennis Site Director for IHSA State Tournament</p>
+        <h3 class="resume-main-title">Work Experience and Other Positions</h3>
+        <ul>
+          <li>Tennis Site Director for IHSA State Tournament</li>
+          <li>Captain of the Illinois Tech Overwatch Esports Team</li>
+          <li>Board Member for the Illinois Tech Tabletop RPG Club</li>
+        </ul>
       </section>
       <section class="main-info" id="coding">
         <h3 class="resume-main-title">Programming Languages</h3>
