Recreate Resume Information

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </header>
       <main id="content">
         <section class="homepage-tab">
-          <h3 class="title-one">Who am I?</h3>
+          <h3 class="title-one">Who am I???</h3>
           <img class="image-one"src="assets/aidan_pavlik_suit.jpg" alt="Image of programming languages" />
           <p class="intro-one">I am a very quick and creative thinker.
           I also like to look for unconvential solutions to problems that most would not think of.
