Update Professional Skills CSS to look smoother

--- a/resume/index.html
+++ b/resume/index.html
@@ -105,17 +105,10 @@
           while also keeping track of all the computers in a RTDB
         </li>
         <li> <a href="https://drive.google.com/drive/u/1/folders/1WlbDT-KBHXO18t4utlylJ602jdoQZGGi">Click here to see
-            demonstration</a></li>
-
+            demonstration</a>
+        </li>
       </ul>
     </section>
-
-
-
-
-
-
-
     <section class="main-info" id="work">
       <h3 class="resume-main-title">Leadership Experience</h3>
       <p></p>
@@ -127,13 +120,6 @@
         </li>
       </ul>
     </section>
-
-
-
-
-
-
-
     <section class="main-info">
       <h3 class="resume-main-title">Personal</h3>
       <p></p>
@@ -144,22 +130,13 @@
             <li>Fall 2021</li>
             <li>Spring 2022</li>
             <li>Fall 2023</li>
-
-
-
           </ul>
-
-
         </li>
-
       </ul>
     </section>
-
-
   </main>
   <footer id="footer">
     <p>Site content and Resume for Aidan Pavlik</p>
   </footer>
 </body>
-
 </html>
