--- a/resume/index.html
+++ b/resume/index.html
@@ -13,7 +13,7 @@
       <ul class="nav-bar">
         <li class="nav-item"><a href="/index.html">Home</a></li>
         <li class="nav-item"><a href="/resume/">Resume</a></li>
-        <li class="nav-item"><a href="#contact">Projects</a></li>
+        <li class="nav-item"><a href="/Projects/">Projects</a></li>
       </ul>
     </nav>
 
@@ -125,7 +125,7 @@
       <p></p>
       <ul>
         <li>Volunteer for Second City Canine Rescue (2013 - Present) </li>
-        <li>Fall 2021 Dean's list
+        <li>Dean's list
           <ul>
             <li>Fall 2021</li>
             <li>Spring 2022</li>
