Create template used for Projects section page

--- a/Projects/index.html
+++ b/Projects/index.html
@@ -31,6 +31,19 @@
 
           <section id="appTwo" class="applications">
             <h3>Cybergoose</h3>
+
+            <p>A cybersecurity Application built to scan your PC for weaknesses </p>
+            <p>Saves data in a secure Database hosted on AWS</p>
+
+            <section>
+              <video width="320" height="240" controls>
+                <source src="../assets/cybergooseVideo.mp4" type="video/mp4">
+                <source src="movie.ogg" type="video/ogg">
+                Your browser does not support the video tag.
+              </video>
+            </section>
+
+
           </section>
 
 
@@ -58,12 +71,14 @@
               , Furnature, Archetect Tools, etc.)
             </p>
             <p>Uses the Google Oauth API to track logins and prevent out of school accounts from logging in.</p>
-            <a href="http://">Link Goes Here</a>
-            <img src="null" alt="Images goes here">
-            <img src="null" alt="Images goes here">
-            <img src="null" alt="Images goes here">
-            <img src="null" alt="Images goes here">
+            <a href="https://github.com/illinoistech-itm/team03m-2024">Github Repo</a>
 
+            <section class="imageSection">
+              <img src="../assets/hawkBizzareAbout.png" alt="Image of About Page">
+              <img src="../assets/hawkBizzareHomepage.png" alt="Image of Homepage">
+              <img src="../assets/hawkBizzareOauthLogin.png" alt="Image of Google Oauth">
+              <img src="../assets/hawkBizzareAllowInfo.png" alt="Image of Google asking for Permission">
+            </section>
           </section>
       
         </main>
