Update Project Page to include start of next project

--- a/Projects/index.html
+++ b/Projects/index.html
@@ -2,12 +2,11 @@
   <html lang="en">
       <head>
         <meta charset="utf-8" />
-        <title>Hobbies: Aidan Pavlik</title>
+        <title>Projects</title>
         <link rel="stylesheet" href="../screen.css"/>
       </head>
       <body>
         <header id="header">
-          <h1>Aidan Pavlik</h1>
           <nav id="site-nav">
             <ul>
               <li>
@@ -26,6 +25,19 @@
           
           <section id="appOne" class="applications">
             <h3>Student Review Database</h3>
+            <p>Flask Web Application</p>
+            <p>A Web application built to allows student to review classes and Professors.
+              Allows them to also view reviews left by other students.
+            </p>
+            <p>Data is saved in an AWS Database</p>
+
+            <section class="imageSection">
+              <img src="IMAGE TO BE ADDED" alt="IMAGE TO BE ADDED">
+              <img src="IMAGE TO BE ADDED" alt="IMAGE TO BE ADDED">
+              <img src="IMAGE TO BE ADDED" alt="IMAGE TO BE ADDED">
+              <img src="IMAGE TO BE ADDED" alt="IMAGE TO BE ADDED">
+            </section>
+
           </section>
 
 
