Add Sunset Sunrise Project to Projects

--- a/Projects/index.html
+++ b/Projects/index.html
@@ -72,6 +72,17 @@
 
           <section id="appFive" class="applications">
             <h3>Get Sunset Application</h3>
+            <p>A Basic Website that uses the Sunset Sunrise API to get sunsets at certain locations</p>
+            <p>Also Uses Current Location API to get Sunset Information for your current location</p>
+            <a href="https://github.com/amp8889/JSWebPrograms">Github Repo</a>
+
+            <section class="imageSection">
+              <img src="../assets/sunsetChicago.png" alt="Image of Sunset Chicago">
+              <img src="../assets/sunsetCurrentLocation.png" alt="Image Sunset Current Location">
+              <img src="../assets/sunsetFlordia.png" alt="Image of Sunset Flordia">
+              <img src="../assets/sunsetNewOrleans.png" alt="Image of Sunset New Orleans">
+            </section>
+
           </section>
 
 
