Change to relative units for image and section size

--- a/Projects/index.html
+++ b/Projects/index.html
@@ -60,7 +60,7 @@
 
 
           <section id="appThree" class="applications">
-            <h3>Hawk Bizzare</h3>
+            <h3>Python Programs</h3>
           </section>
 
 
